package multi_lvl_parkinglot;

/**
 * Represents the physical size category of a parking slot.
 */
public enum SlotType {
    SMALL,
    MEDIUM,
    LARGE
}
