package multi_lvl_parkinglot;

/**
 * Categorizes vehicles by their size class.
 */
public enum VehicleType {
    TWO_WHEELER,
    CAR,
    BUS
}
